# ML-Elevator-Management

./: .gitignore  README.md  pyproject.toml  start_training.py
.github/workflows/: python-app.yml
alg/baseline-alg/: baseline-alg.py
elevator_management/: evaluate.ipynb  main.py  test.py  train.job  train.py
elevator_management/data/: test_data.csv
elevator_management/elsim/: elevator.py  elevator_simulator.py  parameters.py
elevator_management/elsim/tests/: test_advance_trajectory.py  test_elevator_simulator.py  test_elevator_time_to_arive.py
elevator_management/eval/: main.py  remove_if_not_needed.py
elevator_management/ml/: __init__.py  api.py  feature_extractor.py  nearest_car.py  random_scheduler.py  runner.py  scheduler.py
elevator_management/pxsim/: building.py  generate.py  test.ipynb
elevator_management/rl/: PPO-training.py  PPO.py  PPO_v2.py  __init__.py  alpha_lstm.py  feature_extractor.py  network.py  new_network.py  training.py
elevator_management/vis/: console.py  plot.py  visualizer.py
elsim/: pyproject.toml
elsim/elsim/: elevator.py  elevator_simulator.py  parameters.py
elsim/tests/: test_advance_trajectory.py  test_elevator_time_to_arive.py
eval/: pyproject.toml
eval/eval/: main.py
ml/: pyproject.toml
ml/ml/: __init__.py  api.py  nearest_car.py  runner.py  scheduler.py
ml/rl/: PPO-training.py  __init__.py  a-lstm.py  alpha_lstm.py  enviroment.py  enviroment_gym.py  feature_extractor.py  network.py  ppo-lstm.py
pxsim/: README.md  elevator_data.csv  pyproject.toml
pxsim/data/: test_data.csv  w1_f10_0.1.0.csv  w1_f9_0.1.0.csv  w1_f9_1.0.1.csv
pxsim/pxsim/: __init__.py  building.py  distribution.py  generate.py  test.ipynb
sim/: pyproject.toml
vis/: elev_vis.py  pyproject.toml
vis/vis/: console.py
