[tool.poetry]
name = "elevator-management"
version = "0.1.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
pytest = "^7.4.2"
numpy = "^1.26.1"
typing-extensions = "^4.8.0"
gymnasium = "^0.29.1"
torch = "^2.1.0"
black = "^23.11.0"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
