[tool.poetry]
name = "elsim"
version = "1.0.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
pytest = "^7.4.2"
numpy = "^1.26.1"
typing-extensions = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
