[tool.poetry]
name = "eval"
version = "0.1.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
elsim = { path = "../elsim", develop = true }
ml = { path = "../ml", develop = true }
pxsim = { path = "../pxsim", develop = true }
vis = { path = "../vis", develop = true }
stable-baselines3 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
