[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.1"
torch = "^2.1.0"
tensordict = "^0.2.1"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
