[tool.poetry]
name = "vis"
version = "1.0.0"
description = ""
authors = ["Adrian Fagerland <adrian.fagerland@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
elsim = { path = "../elsim", develop = true }
ml = { path = "../ml", develop = true }
pxsim = { path = "../pxsim", develop = true }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
